第一版 h5 模板

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,12 @@
     <meta name="robots" content="index">
     <meta name="referrer" content="origin-when-cross-origin">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <div>111111111</div>
+    <div><img src="./images/default.png"/></div>
 </body>
+<script src="./lib/zepto.min.js"></script>
 <script src="./js/test.js"></script>
 </html>
